2009-06-29  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (LoadGlyph): Save some memory by dropping some
	of the GlyphMetrics fields.

	* layout.cpp: Updated to keep track of the previous GlyphInfo
	rather than the previous GlyphInfo's index.

	* fonts.cpp (TextFont::GetGlyphInfo): Set the GlyphInfo face.
	(TextFont::Kerning): Modified to take GlyphInfo arguments rather
	than face indexes since they are worthless w/o knowing which font
	face the indexes of each are for.

2009-06-29  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: Propagate the IsEnabled changes down the visual
	  tree in OnPropertyChanged, not in SetValue.

2009-06-29  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Store enums as INTs.

2009-06-28  Chris Toshok  <toshok@ximian.com>

	* clock.h|cpp (Clock::RaiseAccumulatedEvents): switch (state ==
	Clock::Active) to (state != Clock::Stopped) to tell whether or not
	we've started (since we can start directly in the filling state.)

	Also remove all the idle_hint stuff, since it's no longer used.

	* timemanager.cpp (RootClockGroup::UpdateFromParentTime): not sure
	why this method is needed at all, but at the very lease we need to
	stop calling ClockGroup::UpdateFromParentTime, since this method
	very nearly duplicates that one (and we're therefore looping over
	the child clocks twice).

2009-06-28  Chris Toshok  <toshok@ximian.com>

	* color.cpp (named_colors): update these so that text-colors.xaml
	passes.

2009-06-28  Larry Ewing  <lewing@novell.com>

	* xaml.cpp (value_from_str_with_parser): allow NAN to be NAN too.

2009-06-27  Jeffrey Stedfast  <fejj@novell.com>

	* glyphs.cpp (OnPropertyChanged): When the FontUriProperty
	changes, the layout *always* gets dirty. We also always need to
	invalidate.

	* fonts.cpp (TextFont::UpdateFaceExtents): New helper method to
	calculate/update the font extents. Only use the extents of the
	first face - this fixes a bunch of MS DRTs.
	(TextFont::.ctor): Call UpdateFaceExtents().